<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_replay_white_24dp"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/clear_items"
                android:title="@string/clear_items" />
            <item
                android:id="@+id/send_testing_message"
                android:title="@string/send_testing_message" />
            <item
                android:id="@+id/testing_data"
                android:title="@string/testing_data" />
            <item android:id="@+id/hide_notification"
                android:title="@string/hide_notification" />
        </menu>
    </item>
</menu>